# cafet-pay

./: .gitignore  README.md  package-lock.json  package.json  ui.py
accounts/: .accounts_test.py.swp  .link.py.swp  accounts_test.py  link.py
backend/: Cargo.toml  Readme.md  Rocket.toml  Rocket.toml.example  USAGE.md
backend/migrations/2019-09-09-161820_accounts/: up.sql
backend/migrations/2019-09-09-215906_products/: up.sql
backend/migrations/2019-09-09-233953_transactions/: up.sql
backend/migrations/2019-09-16-120121_transaction_details/: down.sql  up.sql
backend/migrations/2019-10-07-101533_reductions/: down.sql  up.sql
backend/migrations/2019-10-09-105241_cards/: up.sql
backend/src/: main.rs  models.rs  schema.rs
frontend/: index.js  package-lock.json  package.json
frontend/src/: App.js  index.js  products.js  serial.js
frontend/src/accountsAPI/: accounts.js  config.js  products.js  reductions.js  students.js  transactions.js
frontend/src/api/: accounts.js  cards.js  config.js  products.js
frontend/src/components/: cancel.js  footer.js  orderForm.js  productButtons.js  reductions.js  selected.js  total.js  validate.js
frontend/src/readerAPI/: reader.js
frontend/src/styles/: App.css  footer.scss  form.scss  reductions.scss  total.scss  validate.scss
main/: main.ino
reader-connection/: package-lock.json  package.json
reader-connection/src/: index.js  serial.js
