[package]
name = "cafet-backend"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0.100", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0", features = ["postgres", "chrono", "uuid"]}
dotenv = "0.9"
log = "0.4.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde_json = "1.0.40"
rocket_cors = "0.5.0"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "uuid", "diesel_postgres_pool"]
